--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@vue/test-utils": "^2.0.2",
     "axios": "^0.27.2",
     "happy-dom": "^6.0.4",
+    "pinia": "^2.0.18",
     "vitest": "^0.20.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
