--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon src/main.ts"
-  },
-  "dependencies": {
-    "axios": "^0.27.2",
-    "express": "^4.18.1",
-    "pg-promise": "^10.11.1"  
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.5",
-    "jest": "^28.1.3",
-    "nodemon": "^2.0.19",
-    "ts-jest": "^28.0.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"dev:rest": "nodemon src/main.ts",
+		"dev:graphql": "nodemon src/main.ts",
+		"type": "tsc --project tsconfig.json --noEmit",
+		"prettier": "prettier src/**/*.{js,ts} --write"
+	},
+	"dependencies": {
+		"apollo-server": "^3.10.1",
+		"axios": "^0.27.2",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"graphql": "^16.5.0",
+		"pg-promise": "^10.11.1"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@types/jest": "^28.1.5",
+		"@typescript-eslint/eslint-plugin": "^5.34.0",
+		"@typescript-eslint/parser": "^5.34.0",
+		"eslint": "^8.22.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^28.1.3",
+		"nodemon": "^2.0.19",
+		"prettier": "^2.7.1",
+		"ts-jest": "^28.0.6",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.7.4"
+	}
 }
