fix: tratamento de erro

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -23,6 +23,8 @@
 		"prettier/prettier": "warn",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/no-non-null-assertion": "off",
+		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/ban-types": "off",
 		"@typescript-eslint/no-explicit-any": "off"
 	}
 }
