--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev:rest": "nodemon src/main.ts",
-		"dev:graphql": "nodemon src/main.ts",
+		"dev:graphql": "nodemon src/graphql.ts",
 		"type": "tsc --project tsconfig.json --noEmit",
 		"prettier": "prettier src/**/*.{js,ts} --write"
 	},
